# dev-env-rocky

./: .ansible-lint  .ansible-lint-site-compat.yml  .gitignore  AGENTS.md  Makefile  bootstrap-common  bun-packages.inf  crates.inf  get-python-tooling  get-typescript-tooling  go-packages.inf  install-sub-agents  pylintrc.toml  rpm-packages.inf  ruff.toml  shiny-new-pc.sh  test.sh  uv-tools.inf
.rules/: python-generators.md  python-pyproject.md
agent-prompts/: compush.md  rebase.md  vk.md
ansible/: ansible.cfg  inventory.ini  site.yml
docs/: adr-001-public-private-split.md  adr-002-collection-boundary.md  complexity-antipatterns-and-refactoring-strategies.md  developers-guide.md  documentation-style-guide.md  rfc-claude-code-codex-planning-handoff.md  roadmap.md  users-guide.md
notes/: ansible-tool-modules.md
python/rust_cleanup/: .gitignore  README.md  pyproject.toml
python/rust_cleanup/scripts/: install-rust-cleanup.py
python/rust_cleanup/src/rust_cleanup/: __init__.py  cleanup.py
python/rust_cleanup/tests/: test_cleanup_workflow.py  test_cli.py  test_directory_operations.py  test_rust_cleanup.py
tests/: ansible_module_runner.py  conftest.py  test_agent_config_docstrings.py  test_agent_tools_role.py  test_bootstrap_common.py  test_coderabbit_cli_installer.py  test_coderabbit_cli_role.py  test_cursor_cli_role.py  test_deepseek_tui_agent_configs_behaviour.py  test_deepseek_tui_agent_configs_snapshots.py  test_deepseek_tui_role.py  test_node_packages_role.py  test_packages_role.py  test_paths_role.py  test_sccache_user_role.py  test_uv_tools_role.py
(+163 files in other folders)
